<?xml version="1.0"?>
<package format="2">
  <name>graph_search_wholebody_contact_planner_sample</name>
  <version>0.0.0</version>
  <description>The graph_search_wholebody_contact_planner_sample package</description>

  <maintainer email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</maintainer>

  <license>BSD</license>

  <author email="t-hiraoka@jsk.imi.i.u-tokyo.ac.jp">Takuma-Hiraoka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>graph_search_wholebody_contact_planner</depend>
  <depend>c-wcp</depend>
  <depend>choreonoid</depend>
  <depend>choreonoid_viewer</depend>
  <depend>choreonoid_bullet</depend>
  <depend>choreonoid_cddlib</depend>
  <depend>ik_constraint2_bullet</depend>
  <depend>choreonoid_contact_candidate_generator</depend>

</package>
